Bug 1035917. If we fail to create a requested async scrollable layer then log a warning and approximate reason why. r=roc